<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    tools:context=".AccueilActivity">


    <Button
        android:id="@+id/buttonAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/buttonAccueil" />

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="-3dp"
        android:layout_toLeftOf="@id/buttonAccueil"
        android:text="@string/buttonRetour" />

    <Button
        android:id="@+id/buttonDeconnexion"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="-2dp"
        android:layout_toRightOf="@id/buttonAccueil"
        android:text="@string/buttonDeconnexion" />

    <TextView
        android:id="@+id/msgAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAccueil"
        android:layout_centerVertical="true"
        android:layout_marginTop="74dp"
        android:layout_centerHorizontal="true"
        android:text="@string/msgAccueil"
        android:textSize="40sp"

    />

    <Button
        android:id="@+id/buttonSCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/msgAccueil"
        android:layout_marginTop="76dp"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonSCR" />

    <Button
        android:id="@+id/buttonCCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSCR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/buttonCCR" />


</RelativeLayout>