<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/buttonAccueil" />

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="164dp"
        android:layout_height="48dp"

        android:layout_centerHorizontal="true"
        android:layout_marginRight="-3dp"
        android:layout_toLeftOf="@id/buttonAccueil"
        android:text="@string/buttonRetour" />

    <Button
        android:id="@+id/buttonDeconnexion"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="-2dp"
        android:layout_toRightOf="@id/buttonAccueil"
        android:text="@string/buttonDeconnexion" />

    <TextView
        android:id="@+id/libTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAccueil"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="70dp"
        android:text="@string/lib"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idUser"
        android:layout_centerInParent="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_lock"/>

    <EditText
        android:id="@+id/idUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/libTitle"
        android:layout_centerInParent="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_action_id"/>

    <Button
        android:id="@+id/buttonConnexionP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="29dp"
        android:layout_marginRight="1dp"
        android:text="@string/connexion" />

    <Button
        android:id="@+id/buttonInscri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>