<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    tools:context=".InscriptionActivity">

    <EditText
        android:id="@+id/NomUserIns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nom"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="126dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:drawableLeft="@drawable/ic_action_id"
        />

    <EditText
        android:id="@+id/pasw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="87dp"
        android:layout_below="@id/NomUserIns"
        tools:layout_editor_absoluteY="331dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:drawableLeft="@drawable/ic_action_lock"
        />

    <EditText
        android:id="@+id/repasw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Confirmer mot de passe"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="231dp"
        android:layout_below="@id/pasw"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/buttonValidIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_enregistrer"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="492dp"
        android:layout_below="@id/repasw"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"/>
    <Button
        android:id="@+id/retourBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRetour"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="492dp"
        android:layout_below="@id/buttonValidIn"
        android:layout_margin="50dp"/>



</RelativeLayout>