<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    tools:context=".ErreurSActivity">
    <Button
        android:id="@+id/buttonAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/buttonAccueil" />

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="-3dp"
        android:layout_toLeftOf="@id/buttonAccueil"
        android:text="@string/buttonRetour" />

    <Button
        android:id="@+id/buttonDeconnexion"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="-2dp"
        android:layout_toRightOf="@id/buttonAccueil"
        android:text="@string/buttonDeconnexion" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ERREUR DE SAISIE !"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="180dp"
        android:layout_above="@id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Veuillez de nouveau saisir votre compte-rendu"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="240dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Retour à la saisie"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="321dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>